--- a/style.css
+++ b/style.css
@@ -13,7 +13,119 @@ body {
   justify-content: center;
   min-height: 100vh;
   background-color: rgb(27, 27, 68); /* Light background to contrast the card */
+  padding-top: 80px;
 }
+header {
+  width: 100%;
+  height: 80px;
+  background: #11101b;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 100px;
+  position: fixed; /* Fix header at the top */
+  top: 0;
+  left: 0;
+  z-index: 1000; /* Ensure it stays above other content */
+}
+
+.logo{
+  font-size: 28px;
+  font-weight: bold;
+  color: #fefefe;
+
+}
+
+.hamburger{
+  display: none;
+
+}
+.nav-bar ul{
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-bar ul li a{
+  text-decoration: none;
+  display: block;
+  color: #fefefe;
+  font-size: 20px;
+  padding: 10px 25px;
+  border-radius: 50px;
+  transition: 0.2s;
+  margin: 0 5px;
+}
+.nav-bar ul li a:hover {
+  color: rgb(35, 34, 56);
+  background: rgb(63, 63, 108);
+}
+
+.nav-bar ul li a.active{
+  color: rgb(35, 34, 56);
+  background: rgb(63, 63, 108);
+}
+
+@media only screen and (max-width: 1320px) {
+  header {
+    padding: 0 50px;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  header {
+    padding: 0 30px;
+  }
+}@media only screen and (max-width: 900px) {
+  .hamburger{
+    display: block;
+    cursor: pointer;
+  }
+  .hamburger .line {
+    width: 30px;
+    height: 3px;
+    background: #fefefe;
+    margin: 6px 0;
+  }
+  .nav-bar{
+    height: 0;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    background: #11101b;
+    transition: height 0.5s ease;
+    overflow: hidden;
+
+  }
+
+  .nav-bar.active{
+    height: 450px;
+
+  }
+
+  .nav-bar.open {
+    height: 450px;
+  }
+
+  .nav-bar ul{
+    display: block;
+    width: fit-content;
+    margin: 80px auto 0 auto;
+    text-align: center;
+    transition: 0.5s;
+    opacity: 0;
+  }
+  .nav-bar.active ul{
+    opacity: 1;
+  }
+
+  .nav-bar ul li a{
+    margin-bottom: 12px;
+
+  }
+}
+
 
 .slider-wrapper{
   overflow:hidden;
@@ -96,6 +208,8 @@ body {
 
 
 }
+
+
 
 @media(max-width: 768px) {
   .slider-wrapper {
