articles page updated

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   align-items: center;
   justify-content: start;
   min-height: 100vh;
-  background-color: #0a0e27;
+  background-color: #080C2A;
   padding-top: 80px;
   gap: 20px; /* Add space between elements */
 }
@@ -24,7 +24,7 @@ body {
 header {
   width: 100%;
   height: 80px;
-  background-color: #0a0e27; /* Slightly lighter dark blue */
+  background-color: #080C2A; 
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -187,7 +187,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #7471b776; /* Pure white background */
+  background-color: #1A1838; /* Pure white background */
   margin: 0 auto;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.08);
   border-radius: 16px; /* Rounded corners */
@@ -199,7 +199,7 @@ header {
 /* Hover Effect */
 .card-technology:hover {
   transform: translateY(-10px);
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15), 0 6px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 12px 24px #796fbe26, 0 6px 12px rgba(146, 146, 236, 0.1);
 }
 
 /* Card Image */
@@ -213,14 +213,14 @@ header {
 h5 {
   font-size: 20px;
   font-weight: 600;
-  color: #0a0e27; 
+  color: #B9B7D8; 
   margin-bottom: 10px;
 }
 
 /* Card Description */
 .card-body p {
   font-size: 16px;
-  color: #0a0e27;
+  color: #B9B7D8;
   line-height: 1.6;
   margin: 0;
   padding: 0 20px; /* Add some padding for better text alignment */
